Attemp to fix the scroll problem on mobile devices.

--- a/sources/styles/footer-styles.css
+++ b/sources/styles/footer-styles.css
@@ -10,6 +10,15 @@
     width: 100vw;
     height: 100vh;
     padding: 0;
+    background: radial-gradient(circle,
+            #465ADE,
+            #3544A6,
+            #1a2253,
+            #121637,
+            #465ADE,
+            #3544A6);
+    background-size: 400% 400%;
+    animation: gradient-background 50s ease infinite alternate;
     overflow: hidden;
 }
 
